@@ -1,3 +1,4 @@
+1/5/12 move responsibility for visibility of shaker and dropper into the model
 1/5/12 make concentration meter read all liquids: solution in beaker, solvent faucet, drain faucet, dropper (handle intersection in view)
 1/5/12 compute color of stock solution based on stock concentration
 1/5/12 add color range for solutes (min-max), max is saturated, min is >0, interpolate based on concentration
